Quorum3/Library/Tests/Templating/Pass/PassIntegerTakesNumber_11.quorum
class Main
    action Main
        Test<number> something
        something:doSomething(20)
    end
end