Quorum3/Library/Tests/Templating/Fail/PassTextTakesBoolean_6.quorum
class main
    action Main
        Test<boolean> something
        something:doSomething("text")
    end
end